--- a/package.json
+++ b/package.json
@@ -70,9 +70,9 @@
     "typescript": "^3.3.3"
   },
   "dependencies": {
-    "ula-vc-data-management": "^0.1.0",
-    "universal-ledger-agent": "^0.1.1",
-    "vp-toolkit": "^0.1.0",
+    "ula-vc-data-management": "github:slentsov/ula-vc-data-management#develop",
+    "universal-ledger-agent": "0.1.1",
+    "vp-toolkit": "github:slentsov/vp-toolkit#develop",
     "vp-toolkit-models": "github:rabobank-blockchain/vp-toolkit-models#5dd09eea5109dad2beaac29af8c0a5adda282bdd"
   }
 }
